Version 1.1 - 修复图片加载时的性能问题、修复过多报错弹窗会导致内存泄露的问题、增加内存泄露的自动处理功能